[gd_scene load_steps=6 format=2]

[ext_resource path="res://code/tools/gadgets/SoundMine/SoundMine.gd" type="Script" id=1]
[ext_resource path="res://assets/sfx/thumper.wav" type="AudioStream" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.96648 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[node name="SoundMine" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
max_distance = 500.0
attenuation = 0.554785

[node name="SoundArea" type="Area2D" parent="."]
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="SoundArea"]
scale = Vector2( 25, 25 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 200
one_shot = true
explosiveness = 1.0
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 320.0
color_ramp = SubResource( 2 )

[connection signal="body_entered" from="SoundArea" to="." method="_on_SoundArea_body_entered"]
[connection signal="body_exited" from="SoundArea" to="." method="_on_SoundArea_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
